// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders correctly 1`] = `
<div
  className="sc-bwzfXH fltgEW"
>
  <label
    className="sc-bdVaJa dGGcPj"
  >
    Name
  </label>
  <input
    autoFocus={false}
    className="sc-htpNat fNIrHl"
    data-test-input="name"
    name="name"
    onChange={[Function]}
    placeholder=""
    required={false}
    type="text"
    value="Chris"
  />
</div>
`;

exports[`TextInput renders correctly with props 1`] = `
<div
  className="sc-bwzfXH fltgEW"
>
  <label
    className="sc-bdVaJa dGGcPj"
  >
    Name
  </label>
  <input
    autoFocus={true}
    className="sc-htpNat fNIrHl"
    data-test-input="email"
    name="email"
    onChange={[Function]}
    placeholder="sam@company.com"
    required={true}
    type="email"
    value="chris@company.com"
  />
</div>
`;
